--- a/style.css
+++ b/style.css
@@ -511,6 +511,23 @@ nav .logo-img {
   .boxes #third-box {
     display: block;
   }
+
+  .categories {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .categories .category {
+    width: 49%;
+  }
+  .categories .category .top-category {
+    height: 240px;
+  }
+  .categories .category .bottom-category li {
+    font-size: 0.7rem;
+  }
+  .categories #second-category {
+    display: flex;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
