--- a/style.scss
+++ b/style.scss
@@ -754,4 +754,35 @@ footer {
         display: block;
     }
 
+    // Categories 
+
+    .categories {
+        justify-content: space-between;
+
+        .category {
+            width: 32%;
+
+            .top-category {
+                height: 240px;
+
+                h3 {
+                    font-size: 1.1rem;
+                }
+            }
+            .center-category {
+                h5 {
+                    font-size: 0.75rem;
+                }
+            }
+            .bottom-category {
+                li {
+                    font-size: 0.7rem;
+                }
+            }
+        }
+        #third-category {
+            display: flex;
+        }
+    }
+
 }
