--- a/style.scss
+++ b/style.scss
@@ -785,4 +785,30 @@ footer {
         }
     }
 
+    // Latest News 
+
+    .news {
+        img {
+            height: 130px;
+        }
+    }
+
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 10px;
+
+        .sub-news {
+            h4 {
+                font-size: 0.7em;
+            }
+        }
+    }
+
+    .deals {
+        h4 {
+            margin-top: 20px;
+        }
+    }
+
 }
